# photoViewer

./: .gitignore  CMakeLists.txt  README.md  buildandrun.sh  buildandrundbg.sh  imgui.ini  nvim.sh  tmux.sh
ext/: CMakeLists.txt
ext/TinyEXIF/: CMakeLists.txt  license.txt
ext/raylib/: .directory
ext/tinyexif/: .gitignore  CONTRIBUTORS  Makefile  README.md  demo.cpp  exif.cpp  exif.h
scripts/: buildrel.sh  moveImages.sh
src/: CMakeLists.txt  application.cpp  application.hpp  imageViewport.cpp  imageViewport.hpp  logger.h  main.cpp  timer.cpp  timer.hpp  types.cpp  types.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp
